--- a/css/paginaPrincipal.css
+++ b/css/paginaPrincipal.css
@@ -1,3 +1,80 @@
+/* CARRUSEL DE IMÁGENES */
+
+.banner {
+  position: relative;
+  width: auto;
+  height: 75vh;
+  overflow: hidden;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-imagen {
+  width: 80%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-imagen img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.puntos-banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 5px;
+}
+
+.punto {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: rgba(253, 231, 34, 0.692);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.punto:hover,
+.punto.activo {
+  background-color: rgb(255, 94, 0);
+}
+
+/* SECCIÓN DE SERVICIOS */
+
+.servicios {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px 10px;
+  margin-top: 80px;
+  margin-bottom: 100px;
+  background-color: var(--ocaso-claro-color);
+}
+
+.servicio {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.2rem;
+  color: var(--oscuro-text-color);
+  font-weight: bold;
+}
+
+.servicio i {
+  font-size: 1.5rem;
+  color: var(--oscuro-text-color);
+}
+
+
 /* CATÁLOGO */
 
 .catalogo {
@@ -13,6 +90,7 @@
   width: 100%;
   box-sizing: border-box;
   gap: 20px;
+  margin-bottom: 50px;
 }
 
 /* SCROLL CATEGORÍAS */
@@ -103,6 +181,11 @@
   align-items: center;
   justify-content: space-between;
   /* height: 400px; si empieza a colapsar o desbordar el texto*/
+}
+
+.producto a {
+  text-decoration: none;
+  color: var(--oscuro-text-color)
 }
 
 .producto img {
